--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^2.9.4",
     "mapbox-gl": "^1.12.0",
     "next": "10.0.0",
     "react": "17.0.1",
